[package]
name = "stringx"
description = "Traits for often used functionality when generating or modifying strings."
license = "MIT"
repository = "https://github.com/creatorsiso/stringx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
